--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     <br>
     <div class="container">
       <div class="row" id="bug-area">
-        
+
       </div>
     </div>
 
     <div id="cinema-area" class="hidden"></div>
+
+    <div id="map"></div>
 
     <!-- <label for="latt-term">Location</label>
     <input type="text" id="latt-term">
@@ -74,6 +76,7 @@
 
     <!-- =============================================================================== -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-9rm4gqljdlkdqlJyeFe2YHKfEIS3g6o&libraries=places"></script>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
