places api working

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     </div>
    
-
+   
     
     <br>
     <div class="container">
@@ -44,9 +44,12 @@
       </div>
     </div>
 
-    <div id="cinema-area" class="hidden"></div>
+    <div class="container">
+        <div class="row" id="places-area">
+  
+        </div>
+      </div>
 
-    <div id="map"></div>
 
     <!-- <label for="latt-term">Location</label>
     <input type="text" id="latt-term">
