table of places search added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
 
     <div class="container">
         <div class="row" id="places-area">
-  
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>Type</th>
+                    <th>Name</th>
+                    <th>Rating</th>
+                    <th>Address</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  
+                </tbody>
+              </table>
         </div>
       </div>
 
