--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     
 
-    <div class="container">
+    <div class="container hidden">
         <div class="row" id="places-area">
             <table class="table table-striped">
                 <thead>
