--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Modal Header</h4>
+              <h4 class="modal-title" id="search-title"></h4>
             </div>
             <div class="modal-body">
                 <div class="form-group" class="col-xs-12 col-sm-8 col-sm-offset-2">
@@ -139,7 +139,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title" id="map-name"></h4>
         </div>
         <div class="modal-body">
           <div id="map-div"></div>
@@ -168,7 +168,7 @@
     <!-- =============================================================================== -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-9rm4gqljdlkdqlJyeFe2YHKfEIS3g6o&libraries=places"></script>
-    
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
